--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.75.1",
     "@uniswap/permit2-sdk": "^1.3.1",
     "@uniswap/sdk-core": "^7.7.2",
-    "@uniswap/smart-order-router": "^4.21.10",
+    "@uniswap/smart-order-router": "^4.21.14",
     "@uniswap/universal-router-sdk": "^4.19.5",
     "@uniswap/v3-sdk": "^3.25.2",
     "brotli": "^1.3.3",
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
+    "use-debounce": "^10.0.4",
     "viem": "^2.28.3",
     "wagmi": "^2.15.2",
     "zustand": "^5.0.4"
